# lexoffice

./: .gitignore  Cargo.toml  README.md  build.rs  foo.txt  json
.github/workflows/: check_upstream_docs.yaml  ci.yml  rust.yml
assets/: docs.html
examples/: get_overdue_invoices.rs  get_profile.rs  get_voucher_list.rs  list_contact_names.rs  upload_file.rs
lexoffice/: Cargo.toml
lexoffice-cli/: Cargo.toml
lexoffice-cli/src/: lib.rs  main.rs
lexoffice-cli/src/actions/: by_id.rs  deletable.rs  mod.rs  paginated.rs  storable.rs  updatable.rs
lexoffice-cli/src/resources/: contact.rs  countries.rs  credit_note.rs  down_payment_invoice.rs  event_subscription.rs  file.rs  invoice.rs  mod.rs  order_confirmation.rs  payment.rs  posting_categories.rs  profile.rs  quotation.rs  voucher.rs  voucherlist.rs
lexoffice-js/: Cargo.toml  demo.js
lexoffice-js/src/: lib.rs
lexoffice/examples/: get_overdue_invoices.rs  get_profile.rs  list_contact_names.rs  upload_file.rs
lexoffice/src/: client.rs  error.rs  lib.rs  mime.rs  result.rs  types.rs  wasm32_multipart_compat.rs
lexoffice/src/fs/: bytes_stream.rs  mod.rs
lexoffice/src/model/: contacts.rs  countries.rs  credit_notes.rs  delivery_notes.rs  down_payment_invoices.rs  dunnings.rs  event_subscriptions.rs  files.rs  invoices.rs  mod.rs  order_confirmations.rs  pages.rs  payment_conditions.rs  payments.rs  posting_categories.rs  profile.rs  quotations.rs  recurring_templates.rs  voucherlist.rs  vouchers.rs
lexoffice/src/request/: contacts.rs  countries.rs  credit_notes.rs  delivery_notes.rs  down_payment_invoices.rs  dunnings.rs  event_subscriptions.rs  files.rs  invoices.rs  mod.rs  order_confirmations.rs  payments.rs  posting_categories.rs  profile.rs  quotations.rs  recurring_templates.rs  stream.rs  voucherlist.rs  vouchers.rs
lexoffice/src/request/impls/: by_id.rs  deletable.rs  mod.rs  paginated.rs  storable.rs  updatable.rs
lexoffice/src/serde/: date.rs  mod.rs  optional_date.rs
src/: client.rs  error.rs  lib.rs  main.rs  marker.rs  mime.rs  util.rs
src/data/: common.rs  contacts.rs  credit_notes.rs  event_subscriptions.rs  invoices.rs  mod.rs  profile.rs  quotations.rs
src/error/: mod.rs
src/fs/: api_key.rs  bytes_stream.rs  files.rs  mime.rs  mod.rs
src/model/: contacts.rs  credit_notes.rs  event_subscriptions.rs  files.rs  invoices.rs  mod.rs  order_confirmations.rs  page.rs  pages.rs  profile.rs  quotations.rs  server_resource.rs  voucher_list.rs  voucherlist.rs  vouchers.rs
src/request/: contacts.rs  credit_notes.rs  event_subscriptions.rs  files.rs  invoices.rs  mod.rs  order_confirmations.rs  paginated.rs  profile.rs  quotations.rs  stream.rs  voucher_list.rs
src/request/impls/: by_id.rs  mod.rs  paginated.rs  storable.rs  updatable.rs
src/reqwest_ext/: request.rs  response.rs
src/resource/: contacts.rs  mod.rs
src/response/: mod.rs
tools/: Cargo.toml  index.html
tools/src/: lib.rs  mail_link.rs
tools/src/account/: mod.rs
tools/src/account/pages/: mod.rs  public_api.rs  sign_in.rs  sign_up.rs
tools/src/model_builder/: enums.rs  fields.rs  io.rs  mod.rs  modules.rs  structs.rs  utils.rs
tools/src/pages/: account.rs  public_api.rs  sign_in.rs  sign_up.rs
