[package]
name = "lexoffice"
version = "0.1.0"
authors = ["Enno Boland <g@s01.de>"]
edition = "2018"

[features]
default = ["fs", "env"]
fs = ["tokio"]
env = []

[dependencies.reqwest]
git = "https://github.com/Gottox/reqwest"
rev = "20d883fc2834e65b74bb4207bfc778ed7a294d29"
#path = "../reqwest"
features = ["json", "stream"]

[dependencies]
futures = "0.3.1"
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.104"
celes = "1.0.5"
serde_json = "1.0.44"
async-trait = "0.1.22"
tyname = "0.1.0"
derive_more = "0.99.2"
serde_plain = "0.3.0"
mime = "0.3.16"
bytes = "0.5.4"
typed-builder = "0.5.1"
derive-error = "0.0.4"
tokio = { version = "0.2", features = ["stream", "fs"], optional = true }
cfg-if = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }

[[example]]
name = "get_overdue_invoices"
required-features = ["fs", "env"]

[[example]]
name = "get_profile"
required-features = ["fs", "env"]

[[example]]
name = "list_contact_names"
required-features = ["fs", "env"]

[[example]]
name = "upload_file"
required-features = ["fs", "env"]
