[package]
name = "lexoffice"
version = "0.1.0"
authors = ["Enno Boland <g@s01.de>"]
edition = "2018"

[features]
default = ["fs", "env"]
fs = ["tokio"]
env = []

[dependencies]
futures = "0.3.4"
uuid = { version = "0.8.1", features = ["serde"] }
chrono = { version = "0.4.10", features = ["serde"] }
serde = "1.0.104"
celes = "1.0.5"
serde_json = "1.0.48"
async-trait = "0.1.24"
derive_more = "0.99.2"
serde_plain = "0.3.0"
mime = "0.3.16"
bytes = "0.5.4"
typed-builder = "0.5.1"
derive-error = "0.0.4"
tokio = { version = "0.2.11", features = ["stream", "fs"], optional = true }
cfg-if = "0.1.10"
reqwest = { version = "0.10.1", features = ["json", "stream"] }

[dev-dependencies]
tokio = { version = "0.2.11", features = ["macros"] }

[[example]]
name = "get_overdue_invoices"
required-features = ["fs", "env"]

[[example]]
name = "get_profile"
required-features = ["fs", "env"]

[[example]]
name = "list_contact_names"
required-features = ["fs", "env"]

[[example]]
name = "upload_file"
required-features = ["fs", "env"]
