[package]
name = "lexoffice"
version = "0.1.0"
authors = ["Enno Boland <g@s01.de>"]
edition = "2018"

[features]
default = ["fs", "env"]
fs = ["tokio"]
env = []

[dependencies]
iso_currency = { version = "0.4.0", features = ["with-serde"] }
reqwest = { version = "0.10.6", features = ["json", "stream"] }
futures = "0.3.5"
uuid = { version = "0.8.1", features = ["serde"] }
chrono = { version = "0.4.11", features = ["serde"] }
serde = "1.0.114"
celes = "1.0.5"
serde_json = "1.0.56"
derive_more = "0.99.9"
serde_plain = "0.3.0"
mime = "0.3.16"
bytes = "0.5.5"
typed-builder = "0.6.0"
derive-error = "0.0.4"
cfg-if = "0.1.10"
tokio = { version = "0.2.21", features = ["stream", "fs"], optional = true }

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros"] }

[[example]]
name = "get_overdue_invoices"
required-features = ["fs", "env"]

[[example]]
name = "get_profile"
required-features = ["fs", "env"]

[[example]]
name = "list_contact_names"
required-features = ["fs", "env"]

[[example]]
name = "upload_file"
required-features = ["fs", "env"]
