[package]
name = "lexoffice-cli"
version = "0.1.1"
authors = ["Enno Boland <mail@eboland.de>"]
edition = "2018"
repository = "https://github.com/Gottox/lexoffice"
license = "AGPL-3.0-or-later"
description = "command line client for LexOffice"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lexoffice"
path = "src/main.rs"

[dependencies]
lexoffice = { path = "../lexoffice" }
tokio = { version = "0.2.21", features = ["stream", "fs", "io-std", "macros"] }
structopt = "0.3.15"
serde = "1.0.114"
serde_any = "0.5.0"
mime = "0.3.16"
mime_guess = "2.0.3"
reqwest = "0.10.6"
edit = "0.1.2"
