[package]
name = "lexoffice-cli"
version = "0.2.0"
authors = ["Enno Boland <mail@eboland.de>"]
edition = "2018"
repository = "https://github.com/Gottox/lexoffice"
license = "AGPL-3.0-or-later"
description = "command line client for LexOffice"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexoffice = { version = "0.2.0", path = "../lexoffice" }
tokio = { version = "1.4.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
structopt = "0.3.21"
serde = "1.0.125"
serde_any = { version = "0.5.0", default-features = false, features = ["yaml", "json"] }
mime = "0.3.16"
mime_guess = "2.0.3"
reqwest = "0.11.2"
edit = "0.1.3"
tokio-stream = "0.1.5"
