[package]
name = "lexoffice"
version = "0.1.1"
authors = ["Enno Boland <mail@eboland.de>"]
edition = "2018"
repository = "https://github.com/Gottox/lexoffice"
license = "AGPL-3.0-or-later"
description = "type safe rust interface to the LexOffice public api."
categories = ["api-bindings"]

[features]
default = ["fs", "env"]
fs = ["tokio"]
env = []

[dependencies]
bytes = "0.5.5"
cfg-if = "0.1.10"
chrono = { version = "0.4.13", features = ["serde"] }
derive_more = "0.99.9"
futures = "0.3.5"
mime = "0.3.16"
reqwest = { version = "0.10.6", features = ["json", "stream"] }
serde = "1.0.114"
serde_json = "1.0.56"
serde_plain = "0.3.0"
tokio = { version = "0.2.21", features = ["stream", "fs"], optional = true }
typed-builder = "0.6.0"
uuid = { version = "0.8.1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros"] }

[[example]]
name = "get_overdue_invoices"
required-features = ["fs", "env"]

[[example]]
name = "get_profile"
required-features = ["fs", "env"]

[[example]]
name = "list_contact_names"
required-features = ["fs", "env"]

[[example]]
name = "upload_file"
required-features = ["fs", "env"]
