[package]
name = "lexoffice"
version = "0.2.0"
authors = ["Enno Boland <mail@eboland.de>"]
edition = "2018"
repository = "https://github.com/Gottox/lexoffice"
license = "AGPL-3.0-or-later"
description = "type safe rust interface to the LexOffice public api."
categories = ["api-bindings"]

[features]
default = ["fs", "env"]
fs = ["tokio", "tokio-stream"]
env = []

[dependencies]
bytes = "1.0.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.13"
futures = "0.3.13"
mime = "0.3.16"
reqwest = { version = "0.11.2", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_plain = "0.3.0"
tokio = { version = "1.4.0", features = ["fs"], optional = true }
tokio-stream = { version = "0.1.5", optional = true }
typed-builder = "0.9.0"
uuid = { version = "0.8.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "get_overdue_invoices"
required-features = ["fs", "env"]

[[example]]
name = "get_profile"
required-features = ["fs", "env"]

[[example]]
name = "list_contact_names"
required-features = ["fs", "env"]

[[example]]
name = "upload_file"
required-features = ["fs", "env"]
