[package]
name = "tools"
version = "0.0.0"
authors = ["Enno Boland <mail@eboland.de>"]
edition = "2018"
repository = "https://github.com/Gottox/lexoffice"
license = "AGPL-3.0-or-later"
description = "Development tools for lexoffice"
publish = false

[dependencies]
fantoccini = "0.14.2"
tokio = { version = "0.2.0", features = [ "full" ] }
debug-rs = "0.1.3"
feed-rs = "0.4.1"
reqwest = "0.10.10"
mkpasswd = "0.3.0"
serde_json = "1.0.60"
async-std = "1.8.0"
futures = "0.3.8"
