[package]
name = "tools"
version = "0.0.0"
authors = ["Enno Boland <mail@eboland.de>"]
edition = "2018"
repository = "https://github.com/Gottox/lexoffice"
license = "AGPL-3.0-or-later"
description = "Development tools for lexoffice"
publish = false

[dependencies]
fantoccini = "0.15.0"
tokio = { version = "1.0.1", features = [ "full" ] }
feed-rs = "0.5.1"
reqwest = "0.11.0"
mkpasswd = "0.3.0"
serde_json = "1.0.61"
async-std = "1.8.0"
futures = "0.3.9"
log = "0.4.13"
pretty_env_logger = "0.4.0"

proc-macro2 = "1.0.24"
quote = "1.0.8"
scraper = "0.12.0"
string_morph = "0.1.0"
html2md = "0.2.10"
url = "2.2.0"
tempfile = "3.1.0"
Inflector = "0.11.4"
