[package]
name = "tools"
version = "0.0.0"
authors = ["Enno Boland <mail@eboland.de>"]
edition = "2018"
repository = "https://github.com/Gottox/lexoffice"
license = "AGPL-3.0-or-later"
description = "Development tools for lexoffice"
publish = false

[dependencies]
fantoccini = "0.17.3"
tokio = { version = "1.4.0", features = [ "full" ] }
feed-rs = "0.5.1"
reqwest = "0.11.2"
mkpasswd = "0.3.0"
serde_json = "1.0.64"
async-std = "1.9.0"
futures = "0.3.13"
log = "0.4.14"
pretty_env_logger = "0.4.0"

proc-macro2 = "1.0.26"
quote = "1.0.9"
scraper = "0.12.0"
string_morph = "0.1.0"
html2md = "0.2.10"
url = "2.2.1"
tempfile = "3.2.0"
Inflector = "0.11.4"
